--- a/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/bib/references.bib
+++ b/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/bib/references.bib
@@ -236,3 +236,35 @@
   publisher={Elsevier},
   doi={10.1016/j.cose.2022.102937}
 }
+
+@article{SALLOUM202119,
+title = {Phishing Email Detection Using Natural Language Processing Techniques: A Literature Survey},
+author = {Said Salloum and Tarek Gaber and Sunil Vadera and Khaled Shaalan},
+journal = {Procedia Computer Science},
+volume = {189},
+pages = {19-28},
+year = {2021},
+doi = {https://doi.org/10.1016/j.procs.2021.05.077},
+}
+
+@CONFERENCE{Sathish20231612,
+	author = {Sathish, C. and Mahesh, A. and Karpagam, N. Shunmuga and Vasugi, R. and Indumathi, J. and Kanchana, T.},
+	title = {Intelligent Email Automation Analysis Driving through Natural Language Processing (NLP)},
+	year = {2023},
+	journal = {Proceedings of the 2023 2nd International Conference on Electronics and Renewable Systems, ICEARS 2023},
+	pages = {1612 – 1616},
+	doi = {10.1109/ICEARS56392.2023.10085351},
+	type = {Conference paper},
+}
+
+@ARTICLE{Gutierrez2018988,
+	author = {Gutierrez, Christopher N. and Kim, Taegyu and Corte, Raffaele Della and Avery, Jeffrey and Goldwasser, Dan and Cinque, Marcello and Bagchi, Saurabh},
+	title = {Learning from the ones that got away: Detecting new forms of phishing attacks},
+	year = {2018},
+	journal = {IEEE Transactions on Dependable and Secure Computing},
+	volume = {15},
+	number = {6},
+	pages = {988 – 1001},
+	doi = {10.1109/TDSC.2018.2864993},
+	type = {Article},
+}
