--- a/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/chapter2.tex
+++ b/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/chapter2.tex
@@ -124,7 +124,7 @@ Another technical aspect of the email's metadata that can provide important info
 
 % falar sobre features utilizadas em outros trabalhos
 
-\citet{8257764} categorized the spam features into three primary groups based on the examination of the features present in the relevant studies in their literature: attachment features, payload (body) features, and header features. The header features were grouped into two classes, called email metadata and subject, and are displayed in Figure \ref{fig:header_features}.
+\citet{8257764} categorized the spam features into three primary groups based on the examination of the features present in the relevant studies in their literature: attachment features, payload (body) features, and header features. The header features were grouped into two classes, called email metadata and subject, and are displayed in Figure \ref{fig:c2:header_features}.
 
 \input{figs_tex/c2/header_features.tex}
 
@@ -150,6 +150,20 @@ By incorporating \ac{ml} and \ac{dl} into phishing detection, we not only aim to
 \subsection{Natural Language Processing}
 
 % transformer models (BERT - tracking relationships in sequential data like the words in this sentence)
+
+% falar de coisas gerais sem entrar muito em detalhe
+
+As a branch of artificial intelligence, \ac{nlp} focuses on the interaction between computers and human language. \ac{nlp} combines the power of linguistics and computer science to study the rules and structure of language, and create intelligent systems capable of understanding, analyzing, and extracting meaning from various human inputs, such as voice, and text.
+
+It covers a range of techniques and methodologies designed to enable machines to understand, interpret, and respond to human language in a valuable and meaningful way. Human signs and languages, such as voice, writing, and text, can be automated with a certain level of accuracy using \ac{nlp} techniques~\cite{Sathish20231612}.
+
+
+The relevance of NLP in detecting phishing emails is based in its ability to analyze and understand the textual content of emails. Phishing emails frequently include linguistic clues different from those in normal correspondence, and trick recipients into revealing sensitive information. These cues can be subtle, such as the use of specific words or phrases, or more obvious, such as poor grammar and spelling. In either case, these linguistic features can be used to identify phishing emails, and \ac{nlp} techniques can be used to extract and analyze them.
+
+% ver melhor este texto
+\citet{Gutierrez2018988} mentioned that the most common defensive approaches frequently display a lack of adaptability. This is primarily because of its basis in rigid frameworks like regular expressions that recognize specific text patterns. This limitation highlights how important it is to find different methods to improve phishing detection. The problem for already existing automated solutions, built to manage the flood of phishing emails, is to quickly detect unseen phishing attempts. A major flaw in this solutions is their reliance on surface-level text analysis rather than exploring deeper linguistic patterns and deceitful strategies, such as the use of synonyms and varied sentence structures.
+In the proposed solution they used advanced \ac{nlp} techniques like Named Entity Recognition that its used to recognize different entity types, such as persons, locations, organizations, within the text, and Freebase that essentialy returns potential categories the entity belongs to and provides a score of how relevant each category is. These two techniques form a set of higher-level features, that also includes synonym substitution, to better understand the semantics of phishing emails.
+
 
 \subsection{Machine Learning approaches}
 
