--- a/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/glossary.tex
+++ b/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/glossary.tex
@@ -19,6 +19,7 @@
 	\acro{mbox}[MBOX]{Mailbox}
 	\acro{pst}[PST]{Personal Storage Table}
 	\acro{spf}[SPF]{Sender Policy Framework}
+	\acro{nlp}[NLP]{Natural Language Processing}
 	\acro{ml}[ML]{Machine Learning}
 	\acro{dl}[DL]{Deep Learning}
  
