--- a/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/glossary.tex
+++ b/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/glossary.tex
@@ -22,7 +22,8 @@
 	\acro{nlp}[NLP]{Natural Language Processing}
 	\acro{ml}[ML]{Machine Learning}
 	\acro{dl}[DL]{Deep Learning}
- 
+	\acro{bert}[BERT]{Bidirectional Encoder Representations from Transformers}
+	\acro{rnn}[RNN]{Recurrent Neural Network}
 
 \end{acronym}
 \end{multicols}
