more changes in nlp section

--- a/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/bib/references.bib
+++ b/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/bib/references.bib
@@ -268,3 +268,16 @@ doi = {https://doi.org/10.1016/j.procs.2021.05.077},
 	doi = {10.1109/TDSC.2018.2864993},
 	type = {Article},
 }
+
+@CONFERENCE{Vazhayil201869,
+	author = {Vazhayil, Anu and Harikrishnan, N.B. and Vinayakumar, R. and Soman, K.P.},
+	title = {PED-ML: Phishing email detection using classical machine learning techniques CENSec@Amrita},
+	year = {2018},
+	journal = {CEUR Workshop Proceedings},
+	volume = {2124},
+	pages = {69 - 76},
+	type = {Conference paper},
+	publication_stage = {Final},
+	source = {Scopus},
+	note = {Cited by: 2}
+}
