--- a/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/glossary.tex
+++ b/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/glossary.tex
@@ -24,6 +24,12 @@
 	\acro{dl}[DL]{Deep Learning}
 	\acro{bert}[BERT]{Bidirectional Encoder Representations from Transformers}
 	\acro{rnn}[RNN]{Recurrent Neural Network}
+	\acro{dt}[DT]{Decision Tree}
+	\acro{svm}[SVM]{Suport Vector Machine}
+	\acro{knn}[KNN]{K-Nearest Neighbors}
+	\acro{nb}[NB]{Naive Bayes}
+	\acro{rf}[RF]{Random Forest}
+	\acro{lr}[LR]{Logistic Regression}
 
 \end{acronym}
 \end{multicols}
