nlp section draft

--- a/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/chapter2.tex
+++ b/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/chapter2.tex
@@ -165,16 +165,16 @@ Feature extraction is another important step in \ac{nlp} that involves the extra
 After this, numerical features extracted by the previous techniques can be fed into \ac{ml} models. Depending on the task, different models can be used, such as classification, clustering, and regression models.
 
 % mostrar aplicações de nlp com machine learning
-\citet{Vazhayil201869} presents an insightful application of \ac{nlp} methods in conjunction with \ac{ml} models for phishing email detection. This study uses Term Document Matrix (TDM) for the non-sequential representation of the corpus, followed by Singular Value Decomposition (SVD) and Nonnegative Matrix Factorization (NMF) to extract important features. These extracted features were then used to train various \ac{ml} algorithms, including \ac{dt}, \ac{knn}, \ac{nb}, \ac{rf}, \ac{svm}, and \ac{lr}. In the conclusion, they highlighted the effectiveness of this approach in distinguishing phishing emails from legitimate ones. However, the paper also acknowledges a limitation: the reliance on feature selection, which requires domain knowledge. To address this, future work could incorporate deep learning models that can learn more complex patterns directly from the raw data, potentially improving efficacy.
+\citet{Vazhayil201869} presents an insightful application of \ac{nlp} methods in conjunction with \ac{ml} models for phishing email detection. This study uses Term Document Matrix (TDM) for the non-sequential representation of the corpus, followed by Singular Value Decomposition (SVD) and Nonnegative Matrix Factorization (NMF) to extract important features. These extracted features were then used to train various \ac{ml} algorithms, including \ac{dt}, \ac{knn}, \ac{nb}, \ac{rf}, \ac{svm}, and \ac{lr}. In the conclusion, they highlighted the effectiveness of this approach in distinguishing phishing emails from legitimate ones. However, the paper also acknowledges a limitation: the reliance on feature selection, which requires domain knowledge. To address this, future work could incorporate \ac{dl} models that can learn more complex patterns directly from the raw data, potentially improving efficacy. \citet{Gutierrez2018988} mentioned that the most common defensive approaches frequently display a lack of adaptability. This is primarily because of its basis in rigid frameworks like regular expressions that recognize specific text patterns. A major flaw with \ac{nlp} developed on \ac{ml} is their reliance on surface-level text analysis rather than exploring deeper semantics. This means that if different synonyms of words are chosen or the sentence construction is changed, it is difficult for \ac{nlp} built on \ac{ml} to analyze these changes.
 
 % mostrar aplicações de nlp com deep learning
-Unlike traditional \ac{ml} models, \ac{dl} models can automatically detect and learn features from raw text. This reduces the need to manually extract features from text.
-
-Advancements in this area have led to the development of more sophisticated techniques. \ac{bert} and \ac{rnn} are two examples of such techniques that can be used to process textual data in the \ac{nlp} field.
+Advancements in this area have led to the development of more sophisticated techniques. Unlike traditional \ac{ml} models, \ac{dl} models can automatically detect and learn features from raw text, allowing them to capture complex relationships between words and phrases in a language and to generalize to new and unseen examples. Some examples of \ac{dl} models that can be used in \ac{nlp} are \ac{rnn}, \ac{cnn} and transformer models. \ac{rnn} is a type of neural network that can process sequential data, such as text, by using a hidden state to store information about previous inputs. \ac{cnn}, typically known for image processing, have also been effectively repurposed for \ac{nlp} tasks. Moreover, the emergence of Transformer models marks a significant leap. These models excel in understanding the context of language, processing each word concerning all other words in a sentence, and using self-attention mechanisms to capture the global relationships in a sentence.
 
 % ver melhor este texto
-\citet{Gutierrez2018988} mentioned that the most common defensive approaches frequently display a lack of adaptability. This is primarily because of its basis in rigid frameworks like regular expressions that recognize specific text patterns. This limitation highlights how important it is to find different methods to improve phishing detection. The problem for already existing automated solutions, built to manage the flood of phishing emails, is to quickly detect unseen phishing attempts. A major flaw in this solutions is their reliance on surface-level text analysis rather than exploring deeper linguistic patterns and deceitful strategies, such as the use of synonyms and varied sentence structures.
-In the proposed solution they used advanced \ac{nlp} techniques like Named Entity Recognition that its used to recognize different entity types, such as persons, locations, organizations, within the text, and Freebase that essentialy returns potential categories the entity belongs to and provides a score of how relevant each category is. These two techniques form a set of higher-level features, that also includes synonym substitution, to better understand the semantics of phishing emails.
+\begin{comment}
+    \citet{Gutierrez2018988} mentioned that the most common defensive approaches frequently display a lack of adaptability. This is primarily because of its basis in rigid frameworks like regular expressions that recognize specific text patterns. This limitation highlights how important it is to find different methods to improve phishing detection. The problem with already existing automated solutions, built to manage the flood of phishing emails, is to quickly detect unseen phishing attempts. A major flaw in these solutions is their reliance on surface-level text analysis rather than exploring deeper linguistic patterns and deceitful strategies, such as the use of synonyms and varied sentence structures.
+    In the proposed solution they used advanced \ac{nlp} techniques like Named Entity Recognition that its used to recognize different entity types, such as persons, locations, organizations, within the text, and Freebase that essentialy returns potential categories the entity belongs to and provides a score of how relevant each category is. These two techniques form a set of higher-level features, that also includes synonym substitution, to better understand the semantics of phishing emails.
+\end{comment}
 
 
 \subsection{Machine Learning approaches}
