--- a/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/glossary.tex
+++ b/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/glossary.tex
@@ -30,6 +30,7 @@
 	\acro{nb}[NB]{Naive Bayes}
 	\acro{rf}[RF]{Random Forest}
 	\acro{lr}[LR]{Logistic Regression}
+	\acro{cnn}[CNN]{Convolutional Neural Network}
 
 \end{acronym}
 \end{multicols}
