sentiment analysis section changes

--- a/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/bib/references.bib
+++ b/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/bib/references.bib
@@ -278,6 +278,25 @@ doi = {https://doi.org/10.1016/j.procs.2021.05.077},
 	pages = {69 - 76},
 	type = {Conference paper},
 	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 2}
+}
+
+@INPROCEEDINGS{10085351,
+  author={Sathish, C. and Mahesh, A. and Karpagam, N. Shunmuga and Vasugi, R. and Indumathi, J. and Kanchana, T.},
+  booktitle={2023 Second International Conference on Electronics and Renewable Systems (ICEARS)}, 
+  title={Intelligent Email Automation Analysis Driving through Natural Language Processing (NLP)}, 
+  year={2023},
+  volume={},
+  number={},
+  pages={1612-1616},
+  doi={10.1109/ICEARS56392.2023.10085351}}
+
+@article{SAILUNAZ2019101003,
+title = {Emotion and sentiment analysis from Twitter text},
+journal = {Journal of Computational Science},
+volume = {36},
+pages = {101003},
+year = {2019},
+issn = {1877-7503},
+doi = {https://doi.org/10.1016/j.jocs.2019.05.009},
+author = {Kashfia Sailunaz and Reda Alhajj}
 }
