--- a/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/glossary.tex
+++ b/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/glossary.tex
@@ -31,6 +31,7 @@
 	\acro{rf}[RF]{Random Forest}
 	\acro{lr}[LR]{Logistic Regression}
 	\acro{cnn}[CNN]{Convolutional Neural Network}
+	\acro{nltk}[NLTK]{Natural Language Toolkit}
 
 \end{acronym}
 \end{multicols}
