comparison table for DL and ML approaches

--- a/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/bib/references.bib
+++ b/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/bib/references.bib
@@ -300,3 +300,37 @@ issn = {1877-7503},
 doi = {https://doi.org/10.1016/j.jocs.2019.05.009},
 author = {Kashfia Sailunaz and Reda Alhajj}
 }
+
+@article{ALHOGAIL2021102414,
+title = {Applying machine learning and natural language processing to detect phishing email},
+journal = {Computers & Security},
+volume = {110},
+pages = {102414},
+year = {2021},
+issn = {0167-4048},
+doi = {https://doi.org/10.1016/j.cose.2021.102414},
+author = {Areej Alhogail and Afrah Alsabih}
+}
+
+@ARTICLE{8701426,
+  author={Fang, Yong and Zhang, Cheng and Huang, Cheng and Liu, Liang and Yang, Yue},
+  journal={IEEE Access}, 
+  title={Phishing Email Detection Using Improved RCNN Model With Multilevel Vectors and Attention Mechanism}, 
+  year={2019},
+  volume={7},
+  number={},
+  pages={56329-56340},
+  doi={10.1109/ACCESS.2019.2913705}
+}
+
+@article{atawneh2023phishing,
+  title={Phishing Email Detection Model Using Deep Learning},
+  author={Atawneh, Samer and Aljehani, Hamzah},
+  journal={Electronics},
+  volume={12},
+  number={20},
+  pages={4261},
+  year={2023},
+  publisher={MDPI},
+  doi={https://doi.org/10.3390/electronics12204261}
+}
