--- a/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/bib/references.bib
+++ b/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/bib/references.bib
@@ -303,7 +303,7 @@ author = {Kashfia Sailunaz and Reda Alhajj}
 
 @article{ALHOGAIL2021102414,
 title = {Applying machine learning and natural language processing to detect phishing email},
-journal = {Computers & Security},
+journal = {Computers \& Security},
 volume = {110},
 pages = {102414},
 year = {2021},
