--- a/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/glossary.tex
+++ b/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/glossary.tex
@@ -30,8 +30,22 @@
 	\acro{nb}[NB]{Naive Bayes}
 	\acro{rf}[RF]{Random Forest}
 	\acro{lr}[LR]{Logistic Regression}
+	\acro{mp}[MP]{Multilayer Perceptron}
+	\acro{ab}[AB]{AdaBoost}
+	\acro{mnb}[MNB]{Multinomial Naive Bayes}
+	\acro{gb}[GB]{Gradient Boosting}
 	\acro{cnn}[CNN]{Convolutional Neural Network}
 	\acro{nltk}[NLTK]{Natural Language Toolkit}
+	\acro{misp}[MISP]{Malware Information Sharing Platform}
+	\acro{lstm}[LSTM]{Long Short-Term Memory}
+	\acro{rcnn}[RCNN]{Recurrent Convolutional Neural Network}
+	\acro{bilstm}[BiLSTM]{Bidirectional Long Short-Term Memory}
+	\acro{gcn}[GCN]{Graph Convolutional Network}
+	\acro{glove}[GloVe]{Global Vectors for Word Representation}
+	\acro{gru}[GRU]{Gated Recurrent Unit}
+	\acro{bigru}[BiGRU]{Bidirectional Gated Recurrent Unit}
+	\acro{svc}[SVC]{Support Vector Classifier}
+	\acro{pca}[PCA]{Principal Component Analysis}
 
 \end{acronym}
 \end{multicols}
