--- a/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/chapter2.tex
+++ b/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/chapter2.tex
@@ -60,7 +60,11 @@ Also, it is appropriate to address the \ac{pst} format, which is primarily utili
 The selection of email format is crucial for efficient data administration and analysis when creating a system for phishing email detection. The decision to choose the \ac{eml} format over \ac{mbox} is motivated by the particular advantages it provides, especially about the granularity, providing large information about an email. The standardized nature of \ac{eml} files ensures broad compatibility with a variety of email clients beyond Microsoft Outlook, which is not the case with the \ac{pst} format. For a phishing email detection system that would need to process data from several sources, this compatibility is essential.
 
 %estrutura de um email
-\ac{eml} files include all of the raw data that makes up an email, including the message content and headers. The email headers contain details about the email servers that carried the email, thus serving as a digital trail of the email's journey from sender to recipient. This header is not just a single entity but a collection of various fields, each holding specific information.  Header fields are lines beginning with a field name, followed by a colon (":"), and followed by a field body, as specified in \ac{rfc} 5322~\cite{rfc5322}. The field name identifies the type of information, and the field body, following the colon, contains the specific details corresponding to the field name.
+\ac{eml} files include all of the raw data that makes up an email, including the message content, headers, attachments and signatures. 
+
+\input{figs_tex/c2/eml_contents.tex}
+
+The email headers contain details about the email servers that carried the email, thus serving as a digital trail of the email's journey from sender to recipient. This header is not just a single entity but a collection of various fields, each holding specific information.  Header fields are lines beginning with a field name, followed by a colon (":"), and followed by a field body, as specified in \ac{rfc} 5322~\cite{rfc5322}. The field name identifies the type of information, and the field body, following the colon, contains the specific details corresponding to the field name.
 An example of an email headers message as an \ac{eml} file can be found in Figure \ref{fig:c2:eml}. Several fields are present in the email headers, each with its own purpose:
 
 \begin{enumerate}[label=\Alph*]
@@ -99,6 +103,8 @@ The list of discrete types is long but some important content-types are mentione
 \end{itemize}
 
 
+
+
 \input{figs_tex/c2/eml_body.tex}
 
 
@@ -130,6 +136,8 @@ Another technical aspect of the email's metadata that can provide important info
 
 \citet{Abadla202312} in their study, used a dataset that has around 3800 records and 31 features related to the body of the email message, the subject box, and the sender’s address.
 The proposal highlights specific characteristics often found in phishing emails, such as the inclusion of words like "urgent" and "suspension" in the subject line. Attackers deliberately use these terms to make victims frightened and force them to act right away. In addition, they identified that phishers use header phrases like "Fwd: mail" and "Re: mail" to create the sense of a continuing conversation, which increases the possibility that the receiver may interact with the email. This analysis of header features is crucial in understanding the linguistic and psychological strategies used in phishing attacks, thereby aiding in the development of more effective detection mechanisms. They introduced also the concept of “subject richness”, which pertains to the ratio of the number of words to the number of characters in the subject line. Turns out that this feature is crucial as it influences the open rate of an email.
+
+In the context of phishing detection, the \textbf{Content-Type} field within attachments is a significant indicator. Phishing emails may contain attachments with content-types that are commonly associated with executable or scriptable content, such as "application/x-msdownload" for executables or "application/x-shockwave-flash" for Flash objects, which are potentially harmful. Moreover, attackers may disguise malicious attachments with a benign-looking content-type, such as "application/pdf" or "image/jpeg", while the actual file is a harmful executable. Therefore, it is crucial to not only inspect the declared \textbf{Content-Type} but also to perform a deeper analysis of the attachment itself. This can include scanning for known malware signatures, analyzing the file's actual content beyond its MIME declaration, and sandbox testing to observe the file's behavior when opened. By combining these techniques, a more robust and accurate detection of phishing attempts can be achieved, enhancing the security of email communication.
 
 
 \begin{comment}
@@ -180,34 +188,33 @@ Advancements in this area have led to the development of more sophisticated tech
 \subsection{Machine Learning approaches}
 
 
-The work proposed by~\citet{rabbi2023phishy} aims to find the most efficient techniques for preventing phishing attacks. For that, six ML algorithms were separated including Logistic Regression (LR), K-Nearest Neighbors (KNN), AdaBoost (AB), Multinomial Naive Bayes (MNB), Gradient Boosting (GB), and Random Forest (RF). One of the goals was to answer what is the most powerful machine learning algorithm for detecting phishing emails and the results showed that the Random Forest performed better than other ML algorithms having 98.38\% of accuracy and a low rate of false negatives. Although RF obtained better results, its training time is relatively long when compared to others. However, the approach solely focuses on the email body features. There is more information such as the sender details, header information, and URLs in the email that can provide useful information for the model and increase performance.
+The work proposed by~\citet{rabbi2023phishy} aims to find the most efficient techniques for preventing phishing attacks. For that, six \ac{ml} algorithms were separated including \ac{lr}, \ac{knn}, \ac{ab}, \ac{mnb}, \ac{gb}, and \ac{rf}. One of the goals was to answer what is the most powerful \ac{ml} algorithm for detecting phishing emails and the results showed that the \ac{rf} performed better than other \ac{ml} algorithms having 98.38\% accuracy and a low rate of false negatives. Although \ac{rf} obtained better results, its training time is relatively long when compared to others. However, the approach solely focuses on the email body features. There is more information such as the sender details, header information, and URLs in the email that can provide useful information for the model and increase performance.
 
-In their study, the authors of~\cite{Kumar2023222} introduced a phishing URL detection method that integrates multiple machine learning (ML) algorithms with unique hybrid features. These hybrid features are generated by first applying Principal Component Analysis (PCA) to word vector features, and then merging them with natural language processing (NLP) features. The dataset used in this study comprises approximately 37,000 URLs, evenly split between phishing and legitimate sites. Word vectors, also known as word embeddings, numerically represent words in a high-dimensional space. PCA is employed to reduce the dimensionality of these vectors. The resultant hybrid feature set, post-merging with NLP features, encompasses 142 distinct features. Among the various ML algorithms evaluated, the Random Forest algorithm exhibited the highest accuracy, achieving a remarkable 99.75\%.
+In their study, the authors of~\cite{Kumar2023222} introduced a phishing URL detection method that integrates multiple \ac{ml} algorithms with unique hybrid features. These hybrid features are generated by first applying \ac{pca} to word vector features, and then merging them with \ac{nlp} features. The dataset used in this study comprises approximately 37,000 URLs, evenly split between phishing and legitimate sites. Word vectors, also known as word embeddings, numerically represent words in a high-dimensional space. \ac{pca} is employed to reduce the dimensionality of these vectors. The resultant hybrid feature set, post-merging with \ac{nlp} features, encompasses 142 distinct features. Among the various \ac{ml} algorithms evaluated, the \ac{rf} algorithm exhibited the highest accuracy, achieving a remarkable 99.75\%.
 
-\citet{Shaukat2023} proposed a solution that uses a three-layered approach to detect phishing websites. This multi-perspective layered evaluation has three layers: URL layer, text layer, and image layer. The first one analyzes URL features to detect phishing URLs, the second layer looks for spam content in website text by using natural language processing and the last one categorizes the content of websites by processing text and graphics from advertising. The PhishTank dataset containing 20,000 phishing URLs and the SMS spam and ham dataset from Kaggle were used to train the machine learning models for the first two layers. The third layer takes the images from the websites as input to convert them into text so that they can be readable and given as input to the second layer model. For the URL classification the Decision Tree, Random Forest, Multilayer Perceptron, Support Vector Machine, Logistic Regression and XG Boost models were tested. Naïve Bayes and Linear SVC models were used in the second layer to perform phishing text classification. The results showed up to 91.2\% accuracy in the detection of legitimate or phishing URLs with XGBoost, and 98.9\% accuracy with the Linear SVC model in the text analysis step.
+\citet{Shaukat2023} proposed a solution that uses a three-layered approach to detect phishing websites. This multi-perspective layered evaluation has three layers: URL layer, text layer, and image layer. The first one analyzes URL features to detect phishing URLs, the second layer looks for spam content in website text by using \ac{nlp} and the last one categorizes the content of websites by processing text and graphics from advertising. The PhishTank dataset containing 20,000 phishing URLs and the SMS spam and ham dataset from Kaggle were used to train the machine learning models for the first two layers. The third layer takes the images from the websites as input to convert them into text so that they can be readable and given as input to the second layer model. For the URL classification the \ac{dt}, \ac{rf}, \ac{mp}, \ac{svm}, \ac{lr} and XG Boost models were tested. \ac{nb} and Linear \ac{svc} models were used in the second layer to perform phishing text classification. The results showed up to 91.2\% accuracy in the detection of legitimate or phishing URLs with XGBoost, and 98.9\% accuracy with the Linear \ac{svc} model in the text analysis step.
 
-\citet{Karhani2023206} present a novel approach to detecting phishing URLs and SMS-based phishing (smishing) attacks. This approach combines domain-related features with natural language processing (NLP) techniques. The features related to domains are extracted and used alongside NLP, which is trained on actual smishing messages, to detect attacks accurately. The study proposes integrating this detection system with the open-source threat intelligence platform MISP (Malware Information Sharing Platform). This integration enhances the storage and utilization of flagged phishing domains.
-The dataset for this study includes data from TELUS Corporation and publicly available sources, featuring a mix of phishing and legitimate domains and SMS messages. The methodology involves a hybrid model that combines a Decision Tree model and an NLP model using Support Vector Classification (SVC).
+\citet{Karhani2023206} presents a novel approach to detecting phishing URLs and SMS-based phishing (smishing) attacks. This approach combines domain-related features with \ac{nlp} techniques. The features related to domains are extracted and used alongside \ac{nlp}, which is trained on actual smishing messages, to detect attacks accurately. The study proposes integrating this detection system with the open-source \ac{misp}. This integration enhances the storage and utilization of flagged phishing domains.
+The dataset for this study includes data from TELUS Corporation and publicly available sources, featuring a mix of phishing and legitimate domains and SMS messages. The methodology involves a hybrid model that combines a \ac{dt} model and an \ac{nlp} model using \ac{svc}.
 The model demonstrates an impressive accuracy of 99.40\% and an F1 score exceeding 99\%. The domain checker, part of the hybrid model, showed notable generalization capabilities with an F1 score of 99.01\% and an accuracy of 98.04\%.
-The NLP checker, while effective, did not generalize as well to the confirmed phishing dataset provided by TELUS, with an F1 score and accuracy of 92.98\% and 86.88\% respectively.
-When both models were combined, the NLP checker effectively corrected 69.35\% of the domain checker's false negatives, improving the final accuracy to 99.40\%.
-The importance of this work lies in its high accuracy and practical application in real-time phishing detection. The integration with MISP and the combination of domain and NLP features represent an effective approach to tackling phishing threats.
+The \ac{nlp} checker, while effective, did not generalize as well to the confirmed phishing dataset provided by TELUS, with an F1 score and accuracy of 92.98\% and 86.88\% respectively.
+When both models were combined, the \ac{nlp} checker effectively corrected 69.35\% of the domain checker's false negatives, improving the final accuracy to 99.40\%.
+%The importance of this work lies in its high accuracy and practical application in real-time phishing detection. The integration with MISP and the combination of domain and NLP features represent an effective approach to tackling phishing threats.
 
 \subsection{Deep Learning approaches}
 
-The authors of~\cite{Benavides-Astudillo2023} developed a phishing detection model focusing on the text of web pages rather than URL addresses. This model uses Natural Language Processing (NLP) and Deep Learning (DL) algorithms, specifically using the Keras Embedding Layer with Global Vectors for Word Representation (GloVe) to exploit semantic and syntactic features of webpage content. The method involves four phases: word parsing, data pre-processing, feature representation, and feature extraction. This approach ensures that important words and the order in which they appear are both considered for analysis.
-The model's performance was evaluated using four DL algorithms: Long Short-Term Memory (LSTM), Bidirectional LSTM (BiLSTM), Gated Recurrent Unit (GRU), and Bidirectional GRU (BiGRU). Notably, all four algorithms achieved a mean accuracy of at least 96.7\%, with BiGRU emerging as the top performer, achieving an accuracy of 97.39\%.
-Further analysis revealed that both GRU and BiGRU consistently outperformed LSTM and BiLSTM in terms of test accuracy. Notably, GRU demonstrated the fastest training time, completing its training in just 240 seconds, which could be beneficial if rapid processing is required.
+The authors of~\cite{Benavides-Astudillo2023} developed a phishing detection model focusing on the text of web pages rather than URL addresses. This model uses \ac{nlp} and \ac{dl} algorithms, specifically using the Keras Embedding Layer with \ac{glove} to exploit semantic and syntactic features of webpage content. The method involves four phases: word parsing, data pre-processing, feature representation, and feature extraction. This approach ensures that important words and the order in which they appear are both considered for analysis.
+The model's performance was evaluated using four DL algorithms: \ac{lstm}, \ac{bilstm}, \ac{gru}, and \ac{bigru}. Notably, all four algorithms achieved a mean accuracy of at least 96.7\%, with \ac{bigru} emerging as the top performer, achieving an accuracy of 97.39\%.
+Further analysis revealed that both \ac{gru} and \ac{bigru} consistently outperformed \ac{lstm} and \ac{bilstm} in terms of test accuracy. Notably, \ac{gru} demonstrated the fastest training time, completing its training in just 240 seconds, which could be beneficial if rapid processing is required.
 
-\citet{ALHOGAIL2021102414} detailed an approach using deep learning algorithms and natural language processing (NLP) to enhance phishing detection. Deep learning techniques are useful for phishing email detection because they perform especially well with unstructured data, like email content. The study highlights the advantages of deep learning over other machine learning algorithms because traditional approaches require significant feature engineering. The core of this approach involves a Graph Convolutional Network (GCN), which is described as a type of convolutional neural network that operates directly on graphs. By utilizing a single large graph made from the entire email corpus, it converts the document classification problem into a node classification problem. This study uses NLP on email body features alongside deep learning algorithms using GCN to build an effective phishing email detection classifier. The proposed classifier is built through three main phases: data collection and preparation, construction of the detection model using deep learning GCN algorithms and testing the classifier in a supervised approach using testing data for validation. This model demonstrates its effectiveness in detecting phishing emails based solely on body text, achieving an impressive accuracy rate of 98.2\% with a low false-positive rate of 0.015.
+\citet{ALHOGAIL2021102414} detailed an approach using \ac{dl} algorithms and \ac{nlp} to enhance phishing detection. \ac{dl} techniques are useful for phishing email detection because they perform especially well with unstructured data, like email content. The study highlights the advantages of \ac{dl} over other machine learning algorithms because traditional approaches require significant feature engineering. The core of this approach involves a \ac{gcn}, which is described as a type of \ac{cnn} that operates directly on graphs. By utilizing a single large graph made from the entire email corpus, it converts the document classification problem into a node classification problem. This study uses \ac{nlp} on email body features alongside \ac{dl} algorithms using \ac{gcn} to build an effective phishing email detection classifier. The proposed classifier is built through three main phases: data collection and preparation, construction of the detection model using \ac{dl} \ac{gcn} algorithms and testing the classifier in a supervised approach using testing data for validation. This model demonstrates its effectiveness in detecting phishing emails based solely on body text, achieving an impressive accuracy rate of 98.2\% with a low false-positive rate of 0.015.
 
-The work presented by~\citet{8701426} introduces THEMIS, a new phishing email detection model, which utilizes an improved Recurrent Convolutional Neural Network (RCNN) combined with a multilevel vector approach and an attention mechanism. The model analyzes the email structure, focusing on four detailed parts: the email header, the email body, and text at both the word and character levels.
-The THEMIS model, combining multilevel embedding with the improved RCNN-Attention model, vectorizes the email's text structure and applies Bi-LSTM for better email representation. The attention mechanism is applied between the email header and body, allowing the model to prioritize more significant information from these parts. This complex approach enables THEMIS to perform exceptionally well on an unbalanced dataset, achieving an accuracy rate of 99.848\% and a very low false positive rate (FPR) of 0.043\%, which shows its effectiveness in accurately identifying phishing emails while minimizing the misclassification of legitimate emails.
+The work presented by~\citet{8701426} introduces THEMIS, a new phishing email detection model, which utilizes an improved \ac{rcnn} combined with a multilevel vector approach and an attention mechanism. The model analyzes the email structure, focusing on four detailed parts: the email header, the email body, and text at both the word and character levels.
+The THEMIS model, combining multilevel embedding with the improved \ac{rcnn}-Attention model, vectorizes the email's text structure and applies \ac{bilstm} for better email representation. The attention mechanism is applied between the email header and body, allowing the model to prioritize more significant information from these parts. This complex approach enables THEMIS to perform exceptionally well on an unbalanced dataset, achieving an accuracy rate of 99.848\% and a very low false positive rate (FPR) of 0.043\%, which shows its effectiveness in accurately identifying phishing emails while minimizing the misclassification of legitimate emails.
 
-\citet{atawneh2023phishing} proposal explores the use of deep learning techniques, including Convolutional Neural Networks (CNNs), Long Short-Term Memory (LSTM) networks, Recurrent Neural Networks (RNNs), and Bidirectional Encoder Representations from Transformers (BERT), for detecting email phishing attacks. The proposed model in the study involved collecting, preparing, and utilizing a dataset for training and testing the previously mentioned deep learning models for phishing detection. This included steps like dataset acquisition, data preparation, feature extraction, and model training and testing. The research involved removing HTML tags, numbers, punctuations, stop words, and infrequent words from the email datasets. Stemming was also applied to reduce words to their base form. These preprocessing steps were essential for reducing noise in the data and enabling effective learning by the deep learning models. All these models achieved high accuracy, with the best performance observed using BERT and LSTM, reaching an accuracy of 99.61\%.
+\citet{atawneh2023phishing} proposal explores the use of \ac{dl} techniques, including \ac{cnn}, \ac{lstm} networks, \ac{rnn}, and \ac{bert}, for detecting email phishing attacks. The proposed model in the study involved collecting, preparing, and utilizing a dataset for training and testing the previously mentioned \ac{dl} models for phishing detection. This included steps like dataset acquisition, data preparation, feature extraction, and model training and testing. The research involved removing HTML tags, numbers, punctuations, stop words, and infrequent words from the email datasets. Stemming was also applied to reduce words to their base form. These preprocessing steps were essential for reducing noise in the data and enabling effective learning by the \ac{dl} models. All these models achieved high accuracy, with the best performance observed using \ac{bert} and \ac{lstm}, reaching an accuracy of 99.61\%.
 
-Table \ref{tbl:c2:comparison_table} summarizes the proposed works discussed in this section related to phishing
-detection. The literature review revealed several machine learning and deep learning techniques such as CNN, RNN, LSTM, BiLSTM, GRU, BiGRU, BERT, and GCN, that can be used to detect phishing emails. It also evaluated the performance of various techniques in terms of accuracy.
+Table \ref{tbl:c2:comparison_table} summarizes the proposed works discussed in this section related to phishing detection. The literature review revealed several machine learning and deep learning techniques that can be used to detect phishing emails. It also evaluated the performance of various techniques in terms of accuracy.
 
 % alterar a tabela para os papers certos
 \input{figs_tex/c2/comparison_table.tex}
@@ -219,7 +226,7 @@ Sentiment analysis is a \ac{nlp} technique that refers to the process of evaluat
 The core of sentiment analysis lies in polarity detection, which classifies text into basic categories like positive, negative, or neutral. However, sentiment analysis goes beyond polarity to identify particular emotions like happiness, frustration, anger, and sadness. This technique can be applied to a wide range of domains, including social media, customer reviews, and emails.
 
 % como funciona sentiment analysis (ver aqui https://monkeylearn.com/sentiment-analysis/)
-Generally, the input to a sentiment classification model is a piece of text, and the output is the probability of a certain sentiment or emotion. Typically, this probability is based on either hand-generated features, word n-grams, TF-IDF features, or using deep learning models to capture sequential long- and short-term dependencies. Many emotion systems use lexicons, which are lists of words and their corresponding emotions. These lexicons can be used to determine the sentiment of a text by counting the number of words that match the words in the lexicon. However, this approach is limited by the fact that it does not consider the context of the words, which can lead to inaccurate results.
+Generally, the input to a sentiment classification model is a piece of text, and the output is the probability of a certain sentiment or emotion. Typically, this probability is based on either hand-generated features, word n-grams, TF-IDF features, or using \ac{dl} models to capture sequential long- and short-term dependencies. Many emotion systems use lexicons, which are lists of words and their corresponding emotions. These lexicons can be used to determine the sentiment of a text by counting the number of words that match the words in the lexicon. However, this approach is limited by the fact that it does not consider the context of the words, which can lead to inaccurate results.
 
 % desafios de sentiment analysis
 Despite its wide applications, sentiment analysis faces several challenges. One of the most significant is detecting sarcasm and irony, as these often convey the opposite meaning of the literal words used, leading to potential misinterpretation. Additionally, sentiment analysis must contend with contextual and cultural variations. The same phrase may carry different meanings in different cultures or situations, complicating universal model applicability. Moreover, because human language can be unclear and different people might see it differently, sentiment analysis becomes more complicated. What is considered a positive sentiment in one context may be neutral or even negative in another, which is why we need advanced models that understand the context.
