--- a/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/figs_tex/c2/comparison_table.tex
+++ b/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/figs_tex/c2/comparison_table.tex
@@ -4,17 +4,23 @@
     \label{tbl:c2:comparison_table}
     \begin{tabular}{p{4cm}p{4cm}p{4cm}p{2cm}}
     \hline
-    \textbf{Authors} & \textbf{Purpose} & \textbf{Major Theme} & \textbf{Accuracy} \\
+    \textbf{Authors} & \textbf{Purpose} & \textbf{Major Themes} & \textbf{Accuracy} \\
     \hline
-    Zamir et al., 2020 [6] & Phishing website detection & Using machine learning and neural networks & 97.40\% \\
+    \citet{rabbi2023phishy} & Phishing emails detection & Using several \ac{ml} models & 98.38\% \\
     \hline
-    Valecha et al., 2021 [14] & Phishing email detection & Machine learning models & 96.52\% \\
+    \citet{Kumar2023222} & Phishing URL detection & \ac{ml} models with hybrid features & 99.75\% \\
     \hline
-    Barushka \& Hajek 2018 [15] & Categorizing spam and non-spam messages & Integration of DBB-RDNN-ReL for feature selection & 98.51\% \\
+    \citet{Shaukat2023} & Phishing website detection & URL, text and image as input in several \ac{ml} models & 98.90\% \\
     \hline
-    Fang et al., 2019 [16] & Detecting phishing emails & Use of diversified datasets & 99\% \\
+    \citet{Karhani2023206} & Detecting phishing URL's and SMS-based attacks & Use of \ac{ml} models and integration with \ac{misp} & 99.40\% \\
     \hline
-    Alhogail \& Alsabih et al., 2021 [17] & Email phishing detection and deep learning & Natural language processing and graph conventional network & 98.2\% \\
+    \citet{Benavides-Astudillo2023} & Phishing website detection based on text & Natural language and \ac{dl} & 97.39\% \\
+    \hline
+    \citet{ALHOGAIL2021102414} & Email phishing detection and \ac{dl} & \ac{nlp} and graph conventional network & 98.2\% \\
+    \hline
+    \citet{8701426} & Phishing email detection & Use of \ac{rcnn} with multilevel vectors and attention mechanism & 99.84\% \\
+    \hline
+    \citet{atawneh2023phishing} & Email phishing detection and \ac{dl} & Use of several \ac{dl} models: \ac{cnn}, \ac{rnn}, \ac{lstm}, and \ac{bert} & 99.61\% \\
     \hline
     \end{tabular}
     \end{table}
